Introduced new class ContactSorter, that sorts a list of contacts according to a given ContactField. This fixes the 'descending sorting does not work in printing' as well.

BUG: 206307

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1020045